# python-homework-week7

./: README.md  pyproject.toml
python_homework_week7/: __init__.py  exercise1.py  exercise2.py  exercise3.py  exercise4.py  exercise5.py  exercise6.py  exercise7.py
